notes/lp-cards: Added GTX 1630, what a disappointment

--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -35,9 +35,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- created 2020/10/22 -->
-<!-- updated 2022/10/16 -->
+<!-- updated 2022/10/22 -->
 <h1>List of low profile GPUs for small form factor PCs (SFFs)<span id="List-of-low-profile-GPUs-for-small-form-factor-PCs-SFFs"></span></h1>
-<p>Last updated 🌒 Sun, Oct 16th, 2022.</p>
+<p>Last updated 🌔 Sat, Oct 22nd, 2022.</p>
 <p><img src="assets/low_profile_gpu.jpg" alt="img" /></p>
 <p>Most GPU marketing materials will use the term <strong>LP</strong> or <strong>“low profile”</strong> to refer to graphics cards that are half the height of a normal GPU, not full-height short-length GPUs meant for Mini-ITX cases.
 As far as discrete graphics go, these are the most space and energy-efficient GPUs that money can buy, ideal for use in space-saving PCs, small form factor PCs (SFFs), home theater PCs (HTPCs), slimline cases, specialty server hardware, and other niche form-factors where size and/or power is a constraining factor.
@@ -83,6 +83,7 @@ This list also includes workstation cards for completeness.
 They tend to offer a much worse price-to-performance ratio compared to cards meant for gaming.
 If you’re not looking to drive 4x DisplayPort monitors with a single card, and you are not desperate, don’t bother, as they have no other ports.</p>
 <h1>1-slot Low Profile under 75W<span id="1-slot-Low-Profile-under-75W"></span></h1>
+<p>These can be passively cooled or have a narrow heatsink/fan, requiring only 1 PCIe slot.</p>
 <table>
 <thead>
 <tr>
@@ -335,6 +336,7 @@ If you’re not looking to drive 4x DisplayPort monitors with a single card, and
 </tbody>
 </table>
 <h1>2-slot Low Profile under 75W<span id="2-slot-Low-Profile-under-75W"></span></h1>
+<p>These run hot and have heatsink/fan assemblies that are 2 PCIe slots wide.</p>
 <table>
 <thead>
 <tr>
@@ -366,6 +368,13 @@ If you’re not looking to drive 4x DisplayPort monitors with a single card, and
 <td style="text-align: center">75W</td>
 <td style="text-align: center">4121</td>
 <td style="text-align: left">Available from MSI.</td>
+</tr>
+<tr>
+<td style="text-align: left">Nvidia GeForce GTX 1630</td>
+<td style="text-align: center">2022</td>
+<td style="text-align: center">75W</td>
+<td style="text-align: center">4927</td>
+<td style="text-align: left"></td>
 </tr>
 <tr>
 <td style="text-align: left">Nvidia GeForce GTX 950</td>
