notes/figures: Caught a project diva ACUTE miku reissue
Also a 2nd winter ver. taito miku

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -35,9 +35,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<!-- updated 2022/10/21 -->
+<!-- updated 2022/10/23 -->
 <h1>My Collection of Assorted Figurines<span id="My-Collection-of-Assorted-Figurines"></span></h1>
-<p>Last updated 🌔 Fri, Oct 21st, 2022</p>
+<p>Last updated 🌕 Sun, Oct 23rd, 2022</p>
 <p>Here’s my small, yet growing IRL collection of figurines and other assorted cute things.
 Most are <em>“prize figures”</em> of the variety you could win from a Japanese <a href="https://www.youtube.com/watch?v=93c9oTU7ut0">“skill” claw machine</a>.
 Unfortunately, I live an ocean away from a <em>UFO catcher</em> full of figurines of my favorite <a href="https://www.youtube.com/watch?v=NzEKNzlhJSU">virtual idol</a>, so I can only buy them.</p>
@@ -111,6 +111,8 @@ I remember when <em>“replica”</em> nendoroids were a fringe hobby good releg
 
 var figs = [
 	/* ids prepended with x are knockoffs */
+	[ '401018', 'sega project diva innocent SPM miku' ],
+	[ '718192', 'hatsune miku 2nd season Winter ver.' ],
 	[ '1251026', 'bandai q posket miku type a' ],
 	[ '944728', 'furyu miku bicute bunnies' ],
 	[ '1311067', 'miku artist masterpiece princess alice' ],
@@ -118,7 +120,7 @@ var figs = [
 	[ '1293291', 'furyu sakura miku noodle stopper' ],
 	[ '886807', 'taito sakura miku 2020 ver.' ],
 	[ '1216990', 'racing miku 2021 espresto' ],
-	[ '1035745', "mega 39's breathe you SPM miku" ],
+	[ '1035745', "sega mega 39's breathe you SPM miku" ],
 	[ '1112719', 'miku big nuigurumi plush' ],
 	[ '756832', 'hatsune miku 2nd season Spring ver.' ],
 	[ '776143', 'hatsune miku 2nd season Summer ver.' ],
