notes/figures: Added links

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -80,12 +80,13 @@ I remember when <em>“replica”</em> nendoroids were a fringe hobby good releg
 <p>Do not assume that physical outlets located in shopping malls, indoor or outdoor swap meets are honest or have any clue what they are selling, they can and will play dumb if it suits them. Some are egregious enough to sell fakes at genuine prices to low-information buyers.</p>
 <p>Some tell-tale signs include:</p>
 <ul>
-<li>box artwork that omits manufacturer logos and brand names</li>
-<li>screenprinted eyes that have a bizarre skew or just look “off”</li>
+<li>box artwork that <a href="https://myfigurecollection.net/picture/2402764">omits manufacturer logos and brand names</a></li>
+<li>faces that just look “off”, screenprinted eyes that have a <a href="https://myfigurecollection.net/picture/2182516">bizarre skew</a></li>
 <li>individual parts that won’t fit together correctly or won’t stay snug</li>
+<li>designs that <a href="https://myfigurecollection.net/picture/3267308">don’t actually exist</a>, combinations of 2 or more characters at the same time<sup class="footnote-ref"><a href="#fn1" id="fnref1">1</a></sup></li>
 <li>paint fading quickly even in interior lights from store displays</li>
-<li>ABS plastics yellowing, PVC vinyls leaking plasticizer and turning sticky</li>
-<li>sloppy paint, gloppy paint and paint overspray, a complete disregard for quality</li>
+<li>visible molding seams, ABS plastics yellowing, PVC vinyls leaking plasticizer and turning sticky</li>
+<li><a href="https://myfigurecollection.net/picture/2529349">sloppy paint, gloppy paint</a> and paint overspray, a complete disregard for quality</li>
 </ul>
 <p>Quality can vary varies wildly with knockoffs, they consistently teeter the line between <strong>garbage</strong> and <strong>barely acceptable</strong> <em>(from one viewing angle)</em>, they have no resale or collectible value if you care about that sort of thing, you get what you pay for, generally.</p>
 <h2>Bonus Gallery<span id="Bonus-Gallery"></span></h2>
@@ -188,6 +189,14 @@ for (var i in figs) {
 
 /* ]]> */
 </script>
+<section class="footnotes">
+<ol>
+<li id="fn1">
+<p>A wild new frontier in bootlegs, this is a combination of
+<a href="https://myfigurecollection.net/item/1047417">this Miku</a> and <a href="https://myfigurecollection.net/item/944728">this Rem</a>. <a href="#fnref1" class="footnote-backref">↩</a></p>
+</li>
+</ol>
+</section>
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
