misc/last-fm: Added background music

--- a/misc/last-fm.htm
+++ b/misc/last-fm.htm
@@ -45,6 +45,8 @@
 	<h2>My Last.fm Profile (2012-2015)</h2>
 	<p>Back in the days when Last.fm allowed profile customization and befriending others, I listened to far more music than I do now. I didn't know HTML but I would always customize up my Last.fm sidebar in BBcode.</p>
 	<p>This was the closest thing I had to a website at the time, so I made this mural/collage with period-correct bits and pieces that I could still salvage from the <a href="https://archive.org">Internet Archive</a> at different points in time, I hope you'll indulge me while I try to rekindle faded memories for a bit.</p>
+	<p><sup>bgm: Acetantina / Temple of Null (2020) / 02. Diet Meth</sup></p>
+	<iframe height="100" src="https://www.youtube.com/embed/Ofj1GBd0-fE?autoplay=1&amp;start=242" frameborder="0"></iframe>
 </div>
 
 <div class="container">
