--- a/index.htm
+++ b/index.htm
@@ -100,7 +100,11 @@ So I wrote a static site generator and rolled my own superset of markdown to aut
 <ul>
 <li><em>(2012-2015)</em> <span class="blink" style="color: #FFA5B5;"><em>NSFW!</em></span>
 a collection of <em>“About Mes”</em> previously published on Last.fm
-— <a href="/misc/last-fm.htm"><code>/misc/last-fm.htm</code></a></li>
+— <a href="/misc/last-fm.htm"><code>/misc/last-fm.htm</code></a>
+<ul>
+<li><em>Warning: 45,056K of animated images.</em></li>
+</ul>
+</li>
 </ul>
 <h2>Contact me<span id="Contact-me"></span></h2>
 <p>If it’s about a project or a page on this website, open an issue or a pull request on GitHub at one of the links above.</p>
