Updated homepage introduction with rewritten rationale

--- a/index.htm
+++ b/index.htm
@@ -42,7 +42,8 @@
 <span class="aside"><sup><em>Original illustration <a href="https://gelbooru.com/index.php?page=post&amp;s=view&amp;id=3757995">© 2015 tanakatam</a></em></sup></span></p>
 <h2>About me<span id="About-me"></span></h2>
 <p>This is my little sanctuary where I bottle up the unix computer zealot in me, you can call me <code>microsounds</code> if you want.</p>
-<p>I like <del>muted pastels,</del> starry night skies, people watching and the <a href="http://emulator.pdp-11.org.ru/misc/1978.07_-_Bell_System_Technical_Journal.pdf" title="Bell System Technical Journal Vol. 57, No. 6, Part 2, pp. 1905- (July-Aug. 1978), Dennis Ritchie, Ken Thompson">unix</a> <a href="http://files.catwell.info/misc/mirror/the-unix-programming-environment-kernighan-pike.pdf" title="The Unix Programming Environment (1984), Brian Kernighan, Rob Pike">programming</a> <a href="http://www.catb.org/~esr/writings/taoup/html/" title="The Art of Unix Programming (2003), Eric S. Raymond">environment</a>.</p>
+<p>I like <del>muted pastels,</del> starry night skies, people watching and the <a href="http://emulator.pdp-11.org.ru/misc/1978.07_-_Bell_System_Technical_Journal.pdf" title="Bell System Technical Journal Vol. 57, No. 6, Part 2, pp. 1905- (July-Aug. 1978), Dennis Ritchie, Ken Thompson">unix</a> <a href="http://files.catwell.info/misc/mirror/the-unix-programming-environment-kernighan-pike.pdf" title="The Unix Programming Environment (1984), Brian Kernighan, Rob Pike">programming</a> <a href="http://www.catb.org/~esr/writings/taoup/html/" title="The Art of Unix Programming (2003), Eric S. Raymond">environment</a>.
+This site is my ongoing effort to rekindle my lived and <a href="https://en.wiktionary.org/wiki/anemoia">potentially imagined</a> experiences from the recent past.</p>
 <div class="aside right">
 <p>“I bet you have soft hands and have trouble in loud environments”<br/>
 — <a href="https://desuarchive.org/g/thread/85512771/#85561792">/g/ post No.85561792</a></p>
@@ -51,18 +52,21 @@
 and even though the world I used to know has all but bitrotted away,
 I can still make out the last remnants of those dreamlike days,
 the <em>sentimental microsounds</em> and the <a href="https://effexxx.bandcamp.com/album/from-4jyo-han-to-everywhere-again" title="from 4jyo​-​han to everywhere (2011), effe">sweet nothings</a> spared the ravages of time.</p>
-<p>More importantly, I enjoy designing/writing my own tools and extending existing tools to automate things I would otherwise be doing by hand.
-Sometimes, I’ll do this to force myself to try new things.</p>
+<p>But aside from that, I enjoy designing/writing my own tools and extending existing tools to automate things I would otherwise be doing by hand.
+Both as a form of puzzle solving, and sometimes to force myself to try new things.</p>
 <div class="right" style="filter: grayscale(65%); font-style: italic;">
-<p>I wanted to encourage others to share their knowledge, their lived experiences, dreams and desires through the low tech and pseudononymous nature of the free and open web.
-So I wrote a static site generator and rolled my own superset of markdown to author this site as my personal sandbox.</p>
+<h2 class="center"><em>"The promise and wonder of sharing what we know"</em></h2>
+<p>Personally written web pages where individuals can share their knowledge, dreams and desires through the low tech, open and psuedononymous nature of the world wide web have all but disappeared.
+Unfettered access to the world’s useful information is slowly being eroded in the pursuit of user data analytics and short term financial gain at the expense of everyone else.</p>
+<p>I rolled my own static site generator and my own superset of markdown to author this site and to show that things don’t have to end this way.
+Anyone can create their own personal sandbox on the web and put as much or as little effort into it as they’d like.</p>
+<p>I would be lying if I said I was interested in long form writing, I want to share what I like through the lens of metaprogramming and have fun doing it.</p>
+<p>It’s a never-ending process.</p>
+<p><a href="notes/dotfiles.htm" title="It's pretty fun though."><img src="/static/shimemiku/miku.gif" alt="ico-scripts" /></a></p>
 <div class="aside">
 <p>“This is a website for a person who is nostalgic for the past. They remember fondly the world they used to know, and although it has all but disappeared, they can still make out the last remnants of it. They want to share their memories with others who may feel the same way and create a community of like-minded people.” <br/>
 — <strong>OpenAI GPT-3</strong> after being <a href="https://simonwillison.net/2022/Sep/12/prompt-injection/">prompt injected</a> with this website.</p>
 </div>
-<p>I would be lying if I said I was interested in long form writing, I want to share what I like through the lens of metaprogramming and have fun doing it.</p>
-<p>It’s a never-ending process.</p>
-<p><a href="notes/dotfiles.htm" title="It's pretty fun though."><img src="/static/shimemiku/miku.gif" alt="ico-scripts" /></a></p>
 <!-- firefox renders this hr element above this entire floated div if not placed here -->
 <hr style="width: 70%;
 	border-width: 5px;
