--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -68,7 +68,7 @@ This page will do for now, links take you to their catalog entry on <em>mfc</em>
 </tr>
 <tr>
 <td><img src="https://static.myfigurecollection.net/upload/items/186.jpg" alt="ico-fig-fake" /></td>
-<td><strong>Fake/Bootleg</strong></td>
+<td><strong>Owned (Fake/Bootleg)</strong></td>
 </tr>
 </tbody>
 </table>
@@ -78,17 +78,21 @@ This page will do for now, links take you to their catalog entry on <em>mfc</em>
 <p>In years past, only elaborate and expensive lines of figures would see bootlegging but now even inexpensive prize figures quickly get imitations mere months after release.
 I remember when <em>“replica”</em> nendoroids were a fringe hobby good relegated to the depths of untrustworthy Chinese e-commerce sites, they only cost 20% what a real one would cost, including the shipping.</p>
 <p>Do not assume that physical outlets located in shopping malls, indoor or outdoor swap meets are honest or have any clue what they are selling, they can and will play dumb if it suits them. Some are egregious enough to sell fakes at genuine prices to low-information buyers.</p>
+<p>Be wary of online listings on e-commerce sites using only official promo shots or photoshopping faces.</p>
 <p>Some tell-tale signs include:</p>
 <ul>
 <li>box artwork that <a href="https://myfigurecollection.net/picture/2402764">omits manufacturer logos and brand names</a></li>
 <li>faces that just look “off”, screenprinted eyes that have a <a href="https://myfigurecollection.net/picture/2182516">bizarre skew</a></li>
 <li>individual parts that won’t fit together correctly or won’t stay snug</li>
+<li>designs standing on one leg that cannot hold their own weight and bend at a steep angle</li>
 <li>designs that <a href="https://myfigurecollection.net/picture/3267308">don’t actually exist</a>, combinations of 2 or more characters at the same time<sup class="footnote-ref"><a href="#fn1" id="fnref1">1</a></sup></li>
 <li>paint fading quickly even in interior lights from store displays</li>
-<li>visible molding seams, ABS plastics yellowing, PVC vinyls leaking plasticizer and turning sticky</li>
+<li>visible molding seams <em>(flash)</em>, ABS plastics yellowing, PVC vinyls leaking plasticizer and turning sticky</li>
 <li><a href="https://myfigurecollection.net/picture/2529349">sloppy paint, gloppy paint</a> and paint overspray, a complete disregard for quality</li>
 </ul>
-<p>Quality can vary varies wildly with knockoffs, they consistently teeter the line between <strong>garbage</strong> and <strong>barely acceptable</strong> <em>(from one viewing angle)</em>, they have no resale or collectible value if you care about that sort of thing, you get what you pay for, generally.</p>
+<p>Quality can vary wildly with knockoffs, they consistently teeter the line between <strong>garbage</strong> and <strong>barely acceptable</strong> <em>(from one viewing angle)</em>, with few exceptions.
+The best possible case is coming across “quality rejects” from the genuine production run, but in general, they have no resale or collectible value if you care about that sort of thing.
+That being said, I won’t advise against buying them willingly and deliberately if you accept the drawbacks.</p>
 <h2>Bonus Gallery<span id="Bonus-Gallery"></span></h2>
 <p>This gallery is automatically generated, click images to see more user-submitted images on <em>myfigurecollection.net</em>!</p>
 <div class="gallery" id="fig-gallery">
@@ -112,6 +116,26 @@ I remember when <em>“replica”</em> nendoroids were a fringe hobby good releg
 
 var figs = [
 	/* ids prepended with x are knockoffs */
+
+/*
+	[ '1536230', 're-ment miku miku ♪ room miniature #1 of 8' ],
+	[ '1536252', 're-ment miku miku ♪ room miniature #2 of 8' ],
+	[ '1536231', 're-ment miku miku ♪ room miniature #3 of 8' ],
+	[ '1536233', 're-ment miku miku ♪ room miniature #4 of 8' ],
+	[ '1536234', 're-ment miku miku ♪ room miniature #5 of 8' ],
+	[ '1536236', 're-ment miku miku ♪ room miniature #6 of 8' ],
+	[ '1536237', 're-ment miku miku ♪ room miniature #7 of 8' ],
+	[ '1536238', 're-ment miku miku ♪ room miniature #8 of 8' ],
+
+	[ 'x1214387', 'knockoff taito miku wonderland rapunzel' ],
+	[ 'x186', 'knockoff good smile miku nendoroid #039' ],
+	[ 'x314683', 'knockoff sega miku fuwa fuwa nuigurumi plush (strap)' ],
+	[ 'x370088', 'knockoff sega miku fuwa fuwa mega jumbo nuigurumi plush' ],
+	[ 'x514129', 'knockoff sega nyanko miku fuwa fuwa mega jumbo nuigurumi plush' ],
+	[ 'x809190', 'knockoff furyu miku noodle stopper figure' ],
+	[ 'x2987', 'knockoff max factory figma miku #014' ],
+*/
+
 	[ '401018', 'sega project diva innocent SPM miku' ],
 	[ '718192', 'hatsune miku 2nd season Winter ver.' ],
 	[ '1251026', 'bandai q posket miku type a' ],
@@ -125,8 +149,8 @@ var figs = [
 	[ '1112719', 'miku big nuigurumi plush' ],
 	[ '756832', 'hatsune miku 2nd season Spring ver.' ],
 	[ '776143', 'hatsune miku 2nd season Summer ver.' ],
-	[ '4741', 'hatsune miku EX figure 2009' ],
-	[ '1150601', 'miku nesoberi nuigurumi (extra tiny)' ],
+	[ '4741', 'hatsune miku piano EX figure 2009' ],
+	[ '1150601', 'miku nesoberi nuigurumi (strap)' ],
 	[ '798190', 'sega sakura miku SPM' ],
 	[ '720383', 'sega fate/extella link astolfo SPM' ],
 	[ '693275', 'miku mega jumbo nuigurumi plush 2018' ],
@@ -137,8 +161,8 @@ var figs = [
 	[ '583734', 'izayoi sakuya prize figure' ],
 	[ '200768', 'funko pop rocks miku #39' ],
 	[ '246546', 'sega project diva F2nd miku' ],
-	[ 'x287774', 'umaru-chan nendoroid #524' ],
-	[ 'x26113', 'snow miku nendoroid #150' ],
+	[ 'x287774', 'knockoff good smile umaru-chan nendoroid #524' ],
+	[ 'x26113', 'knockoff good smile snow miku nendoroid #150' ],
 	[ '198604', 'sega project diva 2nd miku' ],
 	[ '47413', 'kogami akira lucky star banpresto' ],
 	[ '167123', 'sega project diva arcade miku 2012' ],
@@ -193,7 +217,7 @@ for (var i in figs) {
 <ol>
 <li id="fn1">
 <p>A wild new frontier in bootlegs, this is a combination of
-<a href="https://myfigurecollection.net/item/1047417">this Miku</a> and <a href="https://myfigurecollection.net/item/944728">this Rem</a>. <a href="#fnref1" class="footnote-backref">↩</a></p>
+<a href="https://myfigurecollection.net/item/1047417">this Rem</a> and <a href="https://myfigurecollection.net/item/944728">this Miku</a>. <a href="#fnref1" class="footnote-backref">↩</a></p>
 </li>
 </ol>
 </section>
