--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -40,7 +40,7 @@
 <p>Last updated 🌕 Sun, Oct 23rd, 2022</p>
 <p>Here’s my small, yet growing IRL collection of figurines and other assorted cute things.
 Most are <em>“prize figures”</em> of the variety you could win from a Japanese <a href="https://www.youtube.com/watch?v=93c9oTU7ut0">“skill” claw machine</a>.
-Unfortunately, I live an ocean away from a <em>UFO catcher</em> full of figurines of my favorite <a href="https://www.youtube.com/watch?v=NzEKNzlhJSU">virtual idol</a>, so I can only buy them.</p>
+Unfortunately, I live an ocean away from a <em>UFO catcher</em> full of figurines of everyone’s favorite <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">virtual idol</a>, so I can only buy them.</p>
 <p>I don’t feel like actually making an account on <em><a href="https://myfigurecollection.net">myfigurecollection.net</a></em> to tell people about them though.
 This page will do for now, links take you to their catalog entry on <em>mfc</em>.</p>
 <h2>Collection<span id="Collection"></span></h2>
@@ -95,6 +95,7 @@ The best possible case is coming across “quality rejects” from the genuine p
 That being said, I won’t advise against buying them willingly and deliberately if you accept the drawbacks.</p>
 <h2>Bonus Gallery<span id="Bonus-Gallery"></span></h2>
 <p>This gallery is automatically generated, click images to see more user-submitted images on <em>myfigurecollection.net</em>!</p>
+<p><em>(I keep this gallery around mostly so I can gawk at people’s gigantic miku collections, they have so much money!)</em></p>
 <div class="gallery" id="fig-gallery">
 </div>
 <style type="text/css">
