notes/figures: knockoff figma miku added

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -35,9 +35,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<!-- updated 2022/10/23 -->
+<!-- updated 2022/11/14 -->
 <h1>My Collection of Assorted Figurines<span id="My-Collection-of-Assorted-Figurines"></span></h1>
-<p>Last updated 🌕 Sun, Oct 23rd, 2022</p>
+<p>Last updated 🌒 Mon, Nov 14th, 2022</p>
 <p>Here’s my small, yet growing IRL collection of figurines and other assorted cute things.
 Most are <em>“prize figures”</em> of the variety you could win from a Japanese <a href="https://www.youtube.com/watch?v=93c9oTU7ut0">“skill” claw machine</a>.
 Unfortunately, I live an ocean away from a <em>UFO catcher</em> full of figurines of everyone’s favorite <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">virtual idol</a>, so I can only buy them.</p>
@@ -134,9 +134,8 @@ var figs = [
 	[ 'x370088', 'knockoff sega miku fuwa fuwa mega jumbo nuigurumi plush' ],
 	[ 'x514129', 'knockoff sega nyanko miku fuwa fuwa mega jumbo nuigurumi plush' ],
 	[ 'x809190', 'knockoff furyu miku noodle stopper figure' ],
-	[ 'x2987', 'knockoff max factory figma miku #014' ],
 */
-
+	[ 'x2987', 'knockoff max factory figma miku #014' ],
 	[ '401018', 'sega project diva innocent SPM miku' ],
 	[ '718192', 'hatsune miku 2nd season Winter ver.' ],
 	[ '1251026', 'bandai q posket miku type a' ],
