about me: inserted one word

--- a/index.htm
+++ b/index.htm
@@ -43,7 +43,7 @@
 <h2>About me<span id="About-me"></span></h2>
 <p>This is my little sanctuary where I bottle up the unix computer zealot in me, you can call me <code>microsounds</code> if you want.</p>
 <p>I like <del>muted pastels,</del> starry night skies, people watching and the <a href="http://emulator.pdp-11.org.ru/misc/1978.07_-_Bell_System_Technical_Journal.pdf" title="Bell System Technical Journal Vol. 57, No. 6, Part 2, pp. 1905- (July-Aug. 1978), Dennis Ritchie, Ken Thompson">unix</a> <a href="http://files.catwell.info/misc/mirror/the-unix-programming-environment-kernighan-pike.pdf" title="The Unix Programming Environment (1984), Brian Kernighan, Rob Pike">programming</a> <a href="http://www.catb.org/~esr/writings/taoup/html/" title="The Art of Unix Programming (2003), Eric S. Raymond">environment</a>.
-This site is my ongoing effort to rekindle my lived and <a href="https://en.wiktionary.org/wiki/anemoia">potentially imagined</a> experiences from the recent past.</p>
+This site is my ongoing effort to rekindle my lived, neglected and <a href="https://en.wiktionary.org/wiki/anemoia">potentially imagined</a> experiences from the recent past.</p>
 <div class="aside right">
 <p>“I bet you have soft hands and have trouble in loud environments”<br/>
 — <a href="https://desuarchive.org/g/thread/85512771/#85561792">/g/ post No.85561792</a></p>
@@ -72,7 +72,7 @@ Anyone can create their own personal sandbox on the web and put as much or as li
 	border-width: 5px;
 	color: #FFF;
 	transform: rotate(120deg);
-	opacity: 40%;"/>
+	opacity: 40%;" />
 </div>
 <h2>Things I’ve made recently<span id="Things-Ive-made-recently"></span></h2>
 <p>I have a collection of notes and writings located at <a href="notes/index.htm"><code>/notes</code></a> if you’re interested.</p>
