Linked to one of my favorite albums

--- a/index.htm
+++ b/index.htm
@@ -51,7 +51,7 @@ This site is my ongoing effort to rekindle my lived, neglected and <a href="http
 <p>The echoes of the old world I once loved and lost have grown dissonant and almost unrecognizable,
 and even though the world I used to know has all but bitrotted away,
 I can still make out the last remnants of those dreamlike days,
-the <em>sentimental microsounds</em> and the <a href="https://effexxx.bandcamp.com/album/from-4jyo-han-to-everywhere-again" title="from 4jyo​-​han to everywhere (2011), effe">sweet nothings</a> spared the ravages of time.</p>
+the <a href="https://www.youtube.com/watch?v=NHmghVWPdQU&amp;list=OLAK5uy_khzI0hCPcRjfp3VWqqpTD1UwPxtvWntbE" title="Do Vocaloids Dream of Doomsday Birds? (2011), sasakure.UK"><em>sentimental microsounds</em></a> and the <a href="https://effexxx.bandcamp.com/album/from-4jyo-han-to-everywhere-again" title="from 4jyo​-​han to everywhere (2011), effe">sweet nothings</a> spared the ravages of time.</p>
 <p>But aside from that, I enjoy designing/writing my own tools and extending existing tools to automate things I would otherwise be doing by hand.
 Both as a form of puzzle solving, and sometimes to force myself to try new things.</p>
 <div class="right" style="filter: grayscale(65%); font-style: italic;">
@@ -163,6 +163,7 @@ copy-pasted directly from someone's website.</em>
 /* ]]> */
 </script>
 <!-- extended reading on unix and adjacent topics -->
+<!-- two of my all-time favorite musical albums -->
 <div class="index">
 </div>
 <hr/>
