notes/useful-links: Added 'Fun and Useful Links to Elsewhere'
Also in this release ---
notes/figures: Updated collection.
about me: added quotes about me

--- a/.kagami/head.htm
+++ b/.kagami/head.htm
@@ -27,6 +27,7 @@
 			<li><a href="{GIT_REMOTE}">my github</a></li>
 			<li><a href="{DOC_ROOT}/notes/dotfiles.htm">my dotfiles</a></li>
 			<li><a href="{DOC_ROOT}/notes/index.htm">my notes</a></li>
+			<li><a href="{DOC_ROOT}/notes/useful-links.htm">useful links</a></li>
 			<li><a href="{DOC_ROOT}/rss.xml">rss <img alt="rss" class="icon" src="{DOC_ROOT}/static/button/rss.svg" /></a></li>
 		</ul>
 	</div>
