--- a/index.htm
+++ b/index.htm
@@ -27,6 +27,7 @@
 			<li><a href="https://github.com/microsounds">my github</a></li>
 			<li><a href="/notes/dotfiles.htm">my dotfiles</a></li>
 			<li><a href="/notes/index.htm">my notes</a></li>
+			<li><a href="/notes/useful-links.htm">useful links</a></li>
 			<li><a href="/rss.xml">rss <img alt="rss" class="icon" src="/static/button/rss.svg" /></a></li>
 		</ul>
 	</div>
@@ -66,6 +67,8 @@ Anyone can create their own personal sandbox on the web and put as much or as li
 <div class="aside">
 <p>“This is a website for a person who is nostalgic for the past. They remember fondly the world they used to know, and although it has all but disappeared, they can still make out the last remnants of it. They want to share their memories with others who may feel the same way and create a community of like-minded people.” <br/>
 — <strong>OpenAI GPT-3</strong> after being <a href="https://simonwillison.net/2022/Sep/12/prompt-injection/">prompt injected</a> with this website.</p>
+<p>“your internet personality is the gayest thing ive ever seen—i love it” <br/>
+— <a href="https://desuarchive.org/g/thread/90152692/#90164467">/g/ post No.90164467</a></p>
 </div>
 <!-- firefox renders this hr element above this entire floated div if not placed here -->
 <hr style="width: 70%;
