--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -27,6 +27,7 @@
 			<li><a href="https://github.com/microsounds">my github</a></li>
 			<li><a href="/notes/dotfiles.htm">my dotfiles</a></li>
 			<li><a href="/notes/index.htm">my notes</a></li>
+			<li><a href="/notes/useful-links.htm">useful links</a></li>
 			<li><a href="/rss.xml">rss <img alt="rss" class="icon" src="/static/button/rss.svg" /></a></li>
 		</ul>
 	</div>
@@ -35,9 +36,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<!-- updated 2022/11/18 -->
+<!-- updated 2022/12/8 -->
 <h1>My Collection of Assorted Figurines<span id="My-Collection-of-Assorted-Figurines"></span></h1>
-<p>Last updated 🌔 Fri, Nov 18th, 2022</p>
+<p>Last updated 🌑 Thu, Dec 8th, 2022</p>
 <p>Here’s my small, yet growing IRL collection of figurines and other assorted cute things.
 Most are <em>“prize figures”</em> of the variety you could win from a Japanese <a href="https://www.youtube.com/watch?v=93c9oTU7ut0">“skill” claw machine</a>.
 Unfortunately, I live an ocean away from a <em>UFO catcher</em> full of figurines of everyone’s favorite <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">virtual idol</a>, so I can only buy them.</p>
@@ -128,12 +129,12 @@ var figs = [
 	[ '1536237', 're-ment miku miku ♪ room miniature #7 of 8' ],
 	[ '1536238', 're-ment miku miku ♪ room miniature #8 of 8' ],
 
-	[ 'x1214387', 'knockoff taito miku wonderland rapunzel' ],
 	[ 'x186', 'knockoff good smile miku nendoroid #039' ],
+*/
+	[ 'x1214387', 'knockoff taito miku wonderland rapunzel' ],
 	[ 'x314683', 'knockoff sega miku fuwa fuwa nuigurumi plush (strap)' ],
 	[ 'x370088', 'knockoff sega miku fuwa fuwa mega jumbo nuigurumi plush' ],
 	[ 'x514129', 'knockoff sega nyanko miku fuwa fuwa mega jumbo nuigurumi plush' ],
-*/
 
 	[ 'x809190', 'knockoff furyu miku noodle stopper figure' ],
 	[ 'x2987', 'knockoff max factory figma miku #014' ],
