--- a/notes/index.htm
+++ b/notes/index.htm
@@ -27,6 +27,7 @@
 			<li><a href="https://github.com/microsounds">my github</a></li>
 			<li><a href="/notes/dotfiles.htm">my dotfiles</a></li>
 			<li><a href="/notes/index.htm">my notes</a></li>
+			<li><a href="/notes/useful-links.htm">useful links</a></li>
 			<li><a href="/rss.xml">rss <img alt="rss" class="icon" src="/static/button/rss.svg" /></a></li>
 		</ul>
 	</div>
@@ -35,10 +36,11 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <h1>Notes<span id="Notes"></span></h1>
-<p>Writings and notes on random topics, sorted by date first posted.</p>
+<p>Writings and notes on random topics, sorted by date of first posting.</p>
 <div class="index">
 <ul>
-<li><a href="figures.htm">My Collection of Assorted Figurines</a> — <em>April 2022 <span style="font-size: 85%;">(updated November 2022)</span></em></li>
+<li><a href="useful-links.htm">Fun and Useful Links to Elsewhere</a> — <em>August 2022 <span style="font-size: 85%;">(updated December 2022)</span></em></li>
+<li><a href="figures.htm">My Collection of Assorted Figurines</a> — <em>April 2022 <span style="font-size: 85%;">(updated December 2022)</span></em></li>
 <li><a href="why-copyleft.htm">On Copyleft and why I use GPLv3</a> — <em>February 2022 <span style="font-size: 85%;">(updated September 2022)</span></em></li>
 <li><a href="low-profile-gpus-for-sff-pcs.htm">List of low profile GPUs for small form factor PCs (SFFs)</a> — <em>October 2020 <span style="font-size: 85%;">(updated October 2022)</span></em></li>
 <li><a href="dotfiles.htm">Selected documentation and usage notes for my dotfiles</a> — <em>August 2019 <span style="font-size: 85%;">(updated December 2022)</span></em></li>
