notes/useful-links: poopingpenis switched URLs

--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -102,7 +102,7 @@
 <img class="right" style="width: 150px;" src="https://upload.wikimedia.org/wikipedia/commons/d/d1/WWW-LetShare.svg" />
 <p><strong>/g/ friends</strong> —</p>
 <ul>
-<li><img src="/static/button/affiliates/poopingpenis.gif" alt="ico" /> <a href="https://poopingpenis.web.fc2.com/">poopingpenis’s igloo</a>
+<li><img src="/static/button/affiliates/poopingpenis.gif" alt="ico" /> <a href="https://poopingpenis.netlify.app/">poopingpenis’s igloo</a>
 <ul>
 <li><em>PC-98 computing enthusiast from Puerto Rico, (escrito en español).</em></li>
 </ul>
